[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "resport"
authors = [{name = "Alex Wolf", email = "f.alexander.wolf@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "markdown",
    "dirsync",
    "python-markdown-math",
    "nbconvert",
    "packaging",
]
[project.urls]
home = "https://github.com/falexwolf/resport"
[project.scripts]
resport = "resport:main"